--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         /* Signature name style */
         .signature-name {
             font-family: 'Great Vibes', cursive;
-            font-size: 1.25rem; /* Reduced for landscape */
+            font-size: 1.5rem; /* Increased for better prominence */
             font-weight: 400;
             line-height: 1.2;
             white-space: nowrap;
@@ -218,6 +218,9 @@
                             Your enthusiasm and commitment have been an inspiration to all.
                         </p>
                     </div>
+
+                    <!-- New decorative line for separation -->
+                    <div class="w-1/2 h-0.5 bg-gradient-to-r from-transparent via-gold-main to-transparent my-6 mx-auto"></div>
 
                     <div class="mt-12 flex justify-center items-end w-full gap-x-24 pb-4">
                         <div class="text-left">
