--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
 
                     <div class="mt-12 flex justify-center items-end w-full gap-x-24 pb-4">
                         <div class="text-left">
-                            <p class="signature-name">Mitali Bhattacharyya</p>
+                            <p class="signature-name">Mitali Bhattacharjee</p>
                         </div>
                         <div class="text-left">
-                            <p class="signature-name">Arundhuti Roy</p>
+                            <p class="signature-name">Arundhati Roy</p>
                         </div>
                     </div>
                 </div>
