--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
             white-space: nowrap;
         }
 
+        /* Signature title/org style */
+        .signature-detail {
+            font-family: 'Playfair Display', serif; /* Using Playfair Display for titles/org */
+            font-size: 0.75rem; /* Reduced font size */
+            line-height: 1.2; /* Tighter line height */
+            white-space: nowrap; /* Prevent text wrapping */
+        }
+
         /* Style for the c/o line */
         .co-line {
             font-family: 'Lora', serif;
@@ -237,9 +245,11 @@
                     <div class="mt-12 flex justify-center items-end w-full gap-x-24 pb-4">
                         <div class="text-left">
                             <p class="signature-name">Mitali Bhattacharjee</p>
+                            <p class="signature-detail">Secretary, Golden Jubilee Celebratory Committee</p>
                         </div>
                         <div class="text-left">
                             <p class="signature-name">Arundhati Roy</p>
+                            <p class="signature-detail">President, Golden Jubilee Celebratory Committee</p>
                         </div>
                     </div>
                 </div>
