--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
                         </p>
                         <p class="mb-2" style="font-size: 1.5rem; font-weight: 700;">
                             <!-- This div provides a visual line for a handwritten name -->
-                            <div class="border-b-2 border-dark-maroon pb-1 h-8"></div>
+                            <div class="border-b-2 border-dark-maroon pb-1 h-8" style="border-style: dotted;"></div>
                         </p>
                         <p class="co-line">
-                            c/o <span class="border-b border-dark-maroon inline-block w-40 h-6"></span>
-                            from <span class="border-b border-dark-maroon inline-block w-48 h-6"></span>
+                            c/o <span class="border-b border-dark-maroon inline-block w-64 h-6"></span>
+                            from <span class="border-b border-dark-maroon inline-block w-64 h-6"></span>
                         </p>
                         <p class="mb-6">
                             for his/her dedicated participation in the
