--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         /* Signature name style */
         .signature-name {
             font-family: 'Great Vibes', cursive;
-            font-size: 1.5rem; /* Increased for better prominence */
+            font-size: 1.35rem; /* Slightly reduced to fit better */
             font-weight: 400;
             line-height: 1.2;
             white-space: nowrap;
@@ -78,10 +78,10 @@
 
         /* Signature title/org style */
         .signature-detail {
-            font-family: 'Playfair Display', serif; /* Using Playfair Display for titles/org */
-            font-size: 0.75rem; /* Reduced font size */
-            line-height: 1.2; /* Tighter line height */
-            white-space: nowrap; /* Prevent text wrapping */
+            font-family: 'Playfair Display', serif;
+            font-size: 0.7rem; /* Slightly reduced to fit better */
+            line-height: 1.2;
+            white-space: nowrap;
         }
 
         /* Style for the c/o line */
@@ -240,9 +240,9 @@
                     </div>
 
                     <!-- New decorative line for separation -->
-                    <div class="w-1/2 h-0.5 bg-gradient-to-r from-transparent via-gold-main to-transparent my-6 mx-auto"></div>
+                    <div class="w-1/2 h-0.5 bg-gradient-to-r from-transparent via-gold-main to-transparent my-4 mx-auto"></div>
 
-                    <div class="mt-12 flex justify-center items-end w-full gap-x-24 pb-4">
+                    <div class="flex justify-center items-end w-full gap-x-12 pb-4">
                         <div class="text-left">
                             <p class="signature-name">Mitali Bhattacharjee</p>
                             <p class="signature-detail">Secretary, Golden Jubilee Celebratory Committee</p>
