--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
             color: #555;
             margin-top: 0.5rem;
         }
+
+        /* Style for the registration text */
+        .registration-text {
+            font-family: 'Lora', serif;
+            font-size: 0.75rem;
+            color: #444;
+            margin-top: 0.25rem;
+            line-height: 1.2;
+        }
         
         /* Watermark styling */
         .watermark-img-container {
@@ -213,6 +222,7 @@
                     <div class="mb-auto pt-4">
                         <p class="form-title-main text-gold-main mb-2 leading-tight">GOLDEN JUBILEE</p>
                         <p class="form-title-main text-black mb-1 leading-tight">Sishu Mangal Parsat</p>
+                        <p class="registration-text">Registered under the West Bengal Societies Registration Act, 1961 - No. S/17073/1975-76</p>
                         <p class="form-subtitle mb-6">Celebrating 50 Years of Educational Excellence</p>
 
                         <div class="inline-block bg-light-gold-bg text-gold-main px-6 py-2 rounded-full text-lg font-bold mb-8">
