--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
                     <div class="flex justify-center items-end w-full gap-x-12 pb-4">
                         <div class="text-left">
-                            <p class="signature-name">Mitali Bhattacharjee</p>
+                            <p class="signature-name">Mitali Bhattacherjee</p>
                             <p class="signature-detail">Secretary, Golden Jubilee Celebratory Committee</p>
                         </div>
                         <div class="text-left">
